<resources>
    <string name="app_name">NorthBengalTourism</string>
    <string name="next">Next</string>
    <string name="about">About</string>
    <string name="mahasthangarh_bogra">Mahasthangarh (Bogra)</string>
    <string name="rajshahi">Rajshahi</string>
    <string name="natore">Natore</string>
    <string name="chapai_nawabjonj">Chapai Nawabgonj</string>
    <string name="paharpur_buddhist_monastery">Paharpur Buddhist Monastery</string>
    <string name="dinajpur">Dinajpur</string>
    <string name="rangpur">Rangpur</string>
    <string name="mahasthangarh_text">Mahasthangarh is one of the main attractions while visiting north Bengal. It is a place of immense interests of tourists for the existence of its ancient structures. Mahasthangarh is the oldest known city in Bangladesh, dating back to at least the 3rd century BC, and is located only 14 km from Bogra town.
                                        \n\nThe spectacular site is an imposing landmark in the area having a fortified, oblong enclosure measuring 5000 ft by 4500 ft with an average height of 15 ft from the surrounding paddy fields. Beyond the fortified area, other ancient ruins fan out within a semicircle of about five miles radius. Several isolated mounds, the local names of which are Govinda Bhita Temple, Khodai Pathar Mound, Parasuramer Bedi etc., surround the fortified city. In the Mahasthangarh Site Museum an interesting collection of recovered pieces are on display. The highlights are the statues of Hindu Gods, terracotta plaques and some bronze statues mostly found in monasteries from the Pala period.\n</string>
    <string name="dinajpur_text">Dinajpur district is also one of the most significant places for tourists for its historic places. The Dinajpur Rajbari (18th century), with its adjoining Krishna temple, is one of the most picturesque historic buildings in North Bengal. It is located about 4 km northeast of central Dinajpur.
                                \n\nThe Kantajees Temple (also known as Kantanagar Temple) is the most spectacular Hindu temple and one of the most beautiful monuments in Bangladesh. It was built in 1752 by PranNath, a renowned maharaja from Dinajpur. Decorated with infinite panels of intricately sculpted terracotta plaques, representing flora fauna, geometric motifs, mythological scenes and an astonishing array of contemporary social scenes, this is the county’s finest example of terracotta style and should not be missed.
                                \n\nThe largest man-made pond of Ramsagar invites visitors from far and near. In winter huge numbers of migratory birds visit the Ramsagar National Park.
                                \n\nShopnopuri is one of the most beautiful artificial tourist spot in north Bengal. You can go there either from Hili or from Dinajpur. There you can enjoy your full day watching this artificial beauty. You can spend night also in Shopnopuri rest house but for that you will have to book in advance. It is an ideal picnic spot also where lots of picnic parties come regularly.\n</string>

    <string name="chapai_text">A site of great historical importance, Gaud has second largest number of mosques after Bagerhaat. It is more than 100 km west of Rajshahi right on the western border of Bangladesh. Some of its sights are in Bangladesh and some in India. The superbly decorated Chhota Sona Masjid (Small Golden Mosque) is only one of the many historic mosques in this area. Built between 1493 and 1526 AD, the well-preserved mosque is actually jet black with patches of terracotta brick work. It is a fine specimen of pre-Mughal architecture, the chief attraction the superb decoration carved on the black-stone walls, both on the inner and the other sides.\n</string>
    <string name="natore_text">Natore is a small town, but an important place for visitors as it holds some significant places with historic and cultural values. It is one hour’s drive from Rajshahi or a one and a half hour’s drive from Bogra. Here you can visit the famous and elegant Natore Rajbari with its fanciful gardens and temple-hemmed ponds, and the government building called Uttara Gano Bhaban, previouslu known as Dighapatia Palace.
                                \n\nThe building was once the palace of the Maharaja of Dighapatia, the region’s governor. Situated 3km north of town, off the road to Bogra, the beautifully maintained complex occupies about 15 hectares of land. The magnificent Natore Rajbari is a series of seven rajbaris, four of which remain largely intact. Natore Rajbari is at the northern edge of the town. Combined with Puthia, Natore is an enchanting day trip from either Rajshahi or Bogra.\n</string>
    <string name="paharpur_text">Paharpur Buddhist Monastery is another tourist attraction of North Bengal. Dated from the 8th century AD, the Somapuri Vihara at Paharpur was once the largest Buddhist monastery on the south of the Himalayas. It is considered the most impressive and important archaeological site in Bangladesh. King Dharma Pal established Paharpur Buddhist Monastery which is the most important and largest known monastery in this country. The main Mandir is in the center of this Monastery which is approximately an area of 27 acres of land.
                                \n\nThe entire establishment, occupying a quadrangular court, measuring more than 900 ft. externally on each side, has high enclosure – walls about 16 ft. thickness is about 12 ft. to 15 ft. height. With elaborate gateway complex on the north, there are 45 cells on the north and 44 in each of the other three sides with a total number of 177 rooms. The architecture of the pyramidal cruciform temple is profoundly influenced by those of South-East Asia, especially Myanmar and Java.
                                \n\nA small site-museum, built in 1956-57, houses the representation collection of objects recovered from the area, where you can see the statues of Buddha and Vishnu. The antiquities of the museum include terracotta plaques, images of different gods and goodness, potteries, coins, inscriptions, ornamental bricks and other minor clay objects.\n</string>
    <string name="rajshahi_text">Rajshahi is known as an university-town for it holds a number of universities of national significance. This city is famous for its sericulture (silk production). Enjoying a stroll along the mighty Padma River and watching the sunset is a favorite pastime of residents and visitors. We arrange tours of a local silk factory and the Varendra Research Museum, the oldest museum in the country.
                                \n\nIt was founded in 1910 with the support of the Maharaja of Dighapatia. The predominantly British style building has some interesting Hindu-Buddhist features. The museum has artifacts from all over the subcontinents including some rare examples from the ancient city of Mohenjodaro in Pakistan, and a great collection of local Hindu sculptures. There is also a Martyr’s Memorial Museum in Rajshahi University that is a reminder of the dreadful days of the liberation war. Among many things there are also the deed papers of surrender by Pakistani forces. A block southeast of Rajshahi Government College, on a high bank of Padma River, is a historic structure known as BaroKuthi. It is one of the last remaining examples of the Indigo Factories (Neel Kuthi) that once flourished in the region. The place has apparently been the reminder of countless crimes during the British rule. Besides, a number of buildings from the Raj era are situated in Rajshahi town, now converted into colleges and schools.\n</string>
    <string name="rangpur_text">Rangpur is home to several public buildings of the Raj era, including the Carmichael College and Tajhat Palace. Here you can also meet members of the Kochi ethnic group, an Indo-Tibetan people related to the plains tribes of Assam.
                                \n\nTajhat palace is one of the finest rajbaris in Bangladesh. It is similar to Ahsan Manzil in Dhaka. During the period of 1982-1991 the palace was used by the High Court Division of Bangladesh Supreme court. Now it is converted into a museum with old manuscripts and findings from Paharpur and Mahasthangarh.
                                \n\n1 km south of Tajhat palace is the “Kali Mondir” or Kali temple. This delightful architectural folly of Kali Temple is modeled on a Florentine dome.
                                \n\nCarmichael College is one of the largest universities in the country in terms of both area and student enrolment. Situated in the outskirts of the town, the college was established in 1916. Similar to Curzon Hall of Dhaka University and with a frontage of about 100 meters, it is a great fusion of classical British and Mughal architecture.\n</string>
    <string name="developed_by">Developed By:\nAsswad Sarker Nomaan\n</string>
    <string name="email">Email:\nnomaan.asn@gmail.com\n</string>
    <string name="facebook">/asnbd</string>
    <string name="back">Back</string>
    <string name="home_text">North Bengal, as the name reveals, represents the northern part of Bangladesh. This part of the country is also an important destination for the tourists as it contains a lot of places with historical backgrounds and importance. Bogra, Rajshai, Natore, Rangpur, Dinajpur are some natable districts of North Bengal where significant tourist spots are there.</string>
    <string name="share">Share</string>
    <string name="failed_loading_data">Failed Loading Data</string>

</resources>
