<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <Button
                android:id="@+id/btn_mahasthangarh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mahasthangarh_bogra"
                />

            <Button
                android:id="@+id/btn_rajshahi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rajshahi"
                />

            <Button
                android:id="@+id/btn_natore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/natore"
                />

            <Button
                android:id="@+id/btn_chapai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chapai_nawabjonj"
                />

            <Button
                android:id="@+id/btn_paharpur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paharpur_buddhist_monastery"
                />

            <Button
                android:id="@+id/btn_rangpur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rangpur"
                />

            <Button
                android:id="@+id/btn_dinajpur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dinajpur"
                />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0000ff"
                android:text="@string/share"
                />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0000ff"
                android:text="@string/about"
                />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>